corrected on small screen

--- a/public/dev/assets/css/extras.css
+++ b/public/dev/assets/css/extras.css
@@ -156,7 +156,7 @@
     padding: 120px 0 135px;
 }
 .services-wrapper {
-    margin-top: 180px;
+    margin-top: 100px;
 }
 .services-head-title {
     font-size: 40px;
@@ -181,6 +181,9 @@ p.services-head-sub-title {
     background: #0052cc;
     color: #fff;
 }
+.service_img {
+    margin: 4% 0 6% 0;
+}
 .card-red{
     background: #f8615a;
     color: black;
@@ -198,6 +201,9 @@ p.services-head-sub-title {
 }
 .service-item {
     border-radius: 10px;
+    margin-bottom: 30px!important;
+    max-height: 440px;
+    min-height: 440px;
 }
 .service-item h4.card-title {
     margin-top: 0px;
@@ -207,20 +213,29 @@ p.services-head-sub-title {
 }
 
 .service-item p.card-text {
-    font-size: 15px;
-    line-height: 23px;
+    font-size: 14px;
+    line-height: 21px;
 }
 .service-item .card-body {
-    padding: 40px 25px;
+    padding: 10px 25px;
 }
 .services .fa {
     font: normal normal normal 14px/1 FontAwesome!important;
 }
 .card-link {
-    margin-top: 50px;
+    margin-top: 20px;
     display: block;
     font-weight: 600;
     font-size: 18px;
+}
+.truncate {
+    overflow: hidden;
+    position: relative;
+    line-height: 1.2em;
+    max-height: 6em;
+    margin-right: -1em;
+    padding-right: 1em;
+    margin: 5% 0 20% 0;
 }
 .service-group {
     margin-bottom: 60px;
@@ -233,17 +248,18 @@ h4.mobile-services-header {
     margin-top: 200px;
 }
 #service_heading {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 600;
-    max-width: 40%;
-    margin-bottom: 150px;
+    max-width: 58%;
+    margin-bottom: 70px;
 }
 .service-details-content h6{
     font-size: 20px;
     margin-bottom: 60px!important;
 }
-#service_paragraph{
+#service_paragraph {
     color: #000!important;
+    font-size: 15px;
 }
 #service_paragraph ul{
     margin-top: 20px;
@@ -252,23 +268,23 @@ h4.mobile-services-header {
     border: none;
 }
 .service-details-content hr {
-    margin-top: 150px;
+    margin-top: 70px;
     border-width: 5px;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
 }
 .about-declaration {
     margin-top: 150px;
     padding: 75px 0 155px;
 }
 .declaration-header {
-    font-size: 60px;
+    font-size: 45px;
     font-weight: 600;
 }
 
 .declaration-content {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 600;
-    max-width: 72%;
+    max-width: 73%;
     margin: auto;
     margin-top: 20px;
 }
@@ -284,10 +300,10 @@ h4.mobile-services-header {
 }
 .story-content {
     color: #fff;
-    font-size: 15px;
+    font-size: 14px;
 }
 .story-image {
-    max-height: 566px;
+    max-height: 490px;
     position: relative;
     overflow: hidden;
     object-position: top;
@@ -306,12 +322,16 @@ h4.mobile-services-header {
 .values-item {
     margin: 0;
     border-radius: 8px;
-    min-height: 400px;
-    max-height: 400px;
+    /* min-height: 400px; */
+    max-height: 315px;
+    border: navajowhite;
+    box-shadow: 0px 2px 2px 1px #00000026;
+    background: #f6f6f6;
 }
 .values-item .card-text {
-    font-size: 14px;
-    line-height: 25px;
+    font-size: 12px;
+    line-height: 22px;
+    color: black;
 }
 .border-red{
     border-top: 30px solid #ff2f6c;
@@ -326,15 +346,16 @@ h4.mobile-services-header {
     margin-top: 50px;
 }
 .values-item .card-body {
-    padding: 30px 15px;
+    padding: 20px 15px;
+    background: #f6f6f6;
 }
 .values-item .card-title {
     font-size: 25px;
     font-weight: 600;
 }
 .leadership-header {
-    font-size: 54px;
-    margin-bottom: 80px;
+    font-size: 45px;
+    margin-bottom: 50px;
     font-weight: 600;
 }
 .leadership-item {
@@ -420,6 +441,22 @@ h4.mobile-services-header {
 }
 .footer-dark .item.text {
     margin-bottom: 0;
+}
+.d-lg-none{
+    display: none;
+}
+p.hero-subtitle {
+    font-weight: 600;
+    max-width: 600px;
+    margin: 0;
+    padding: 17px 0 17px 10px;
+}
+section#carousel {
+    padding: 80px 0 0px;
+}
+.carousel-inner{
+        box-shadow: 1px 1px 11px 1px #00000029;
+    border-radius: 27px;
 }
 @media only screen and (max-width: 1400px) and (min-width: 1250px)  {
 .solution-section img{
@@ -525,10 +562,11 @@ h4.mobile-services-header {
         display: none;
     }
     .solution-header {
-        font-size: 30px;
-        font-weight: 600;
-        margin-bottom: 50px;
-    }
+    font-size: 29px;
+    font-weight: 600;
+    margin-bottom: 30px;
+    max-width: 100%;
+}
     .col-sm-2 {
         -ms-flex: 0 0 16%;
         flex: 0 0 16%;
@@ -542,11 +580,12 @@ h4.mobile-services-header {
         font-size: 20px;
         font-weight: 600;
     }
-    .solution-content {
-        color: white;
-        font-size: 14px;
-        padding-right: 20px;
-    }
+   .solution-content {
+    color: white;
+    font-size: 12px;
+    padding-right: 20px;
+    max-width: 100%;
+}
     .col-xs-6{
         width: 50%;
         padding: 10px;
@@ -585,9 +624,8 @@ h4.mobile-services-header {
         text-align: left!important;
     }
     .footer-middle {
-        margin-top: 50px;
-       
-    }
+    margin-top: 20px;
+}
     .footer-middle p{
         text-align: left!important;
         color: white!important;
@@ -650,17 +688,17 @@ h4.mobile-services-header {
         margin-top: 80px;
         padding: 82px 0 100px;
     }
-    .declaration-header {
-        font-size: 35px;
-        font-weight: 600;
-    }
+   .declaration-header {
+    font-size: 30px;
+    font-weight: 600;
+}
     .declaration-content {
-        font-size: 17px;
-        font-weight: 500;
-        max-width: 100%;
-        margin: auto;
-        margin-top: 20px;
-    }
+    font-size: 15px;
+    font-weight: 500;
+    max-width: 92%;
+    margin: auto;
+    margin-top: 20px;
+}
     .about-story .col-md-7 {
         padding: 0;
     }
@@ -671,17 +709,19 @@ h4.mobile-services-header {
         margin-bottom: 30px;
     }
     .values-header {
-        font-size: 40px;
-        font-weight: 600;
-        margin-bottom: 30px;
-    }
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
     .about-values {
         padding: 70px 0;
     }
     .values-item {
-      
-        margin-bottom: 20px;
-    }
+    margin-bottom: 20px;
+    max-width: 86%;
+    margin-left: auto;
+    max-height: unset;
+}
     .leadership-header {
         font-size: 35px;
         margin-bottom: 10px;
@@ -717,4 +757,84 @@ h4.mobile-services-header {
     .member-profile{
         text-align: center;
     }
+    div#navcol-1 {
+    display: none;
+}
+.home-banner-section {
+    padding: 70px 0 80px;
+}
+.solution-section img {
+    display: none;
+}
+.solution-section {
+    padding: 50px 20px;
+}
+.icon-item {
+    color: #fff;
+    font-size: 30px;
+    text-align: center!important;
+    display: block!important;
+}
+.footer-dark .item:not(.social) {
+    text-align: center;
+    padding-bottom: 5px;
+}
+.values-item .card-text {
+    font-size: 15px;
+    line-height: 22px;
+    color: black;
+}
+p.services-head-sub-title {
+    max-width: 100%;
+    color: #000;
+    font-weight: 600;
+    margin-bottom: 40px;
+}
+.service-item {
+    border-radius: 10px;
+    margin-bottom: 30px!important;
+    max-height: unset;
+    min-height: unset;
+}
+.container {
+    width: 100%;
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.services-head-title {
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+.d-sm-none{
+    display: none;
+}
+.d-lg-none{
+    display: block;
+}
+.btn-mdl-close {
+    max-width: 30%;
+    margin: auto;
+}
+.mobile-cover {
+    max-width: unset!important;
+    object-position: top;
+    width: 130%;
+    position: relative;
+    left: -20px;
+}
+#carousel .hero-title{
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+p.hero-subtitle {
+    font-weight: 500;
+   font-size: 14px;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+}
 }
